Bug 543673 - [12] NPE on using var with switch expressions